# streams

./: .rustfmt.toml  Cargo.toml  meson.build  meson.options
.cargo/: config.toml
data/: meson.build  streams.gresource.xml.in
data/gtk/: window.blp
resources/: meson.build  streams.gresource.xml.in
resources/ui/: window.blp
resources/ui/preferences/: dialog.blp  general.blp
src/: application.rs  config.rs.in  main.rs  meson.build  window.rs
src/accounts/: twitch.rs
src/preferences/: general.rs  mod.rs
