[package]
name = "streams"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { package="gtk4", version="0.9", features=["v4_16"] }
adw = { package="libadwaita", version="0.7", features=["v1_6"] }
twitch_api = { version = "0.7.0", features = ["reqwest", "eventsub", "twitch_oauth2"] }
reqwest = "0.12"
tokio = { version = "1", features = ["rt-multi-thread"] }
keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "sync-secret-service"] }
derive_more = { version = "2.0.1", features = ["from"] }
