option('cargo_env', type: 'array', value: [], description: 'Environment variables to pass to cargo')
option('app_id', type: 'string', value: 'stream.streamsapp.Streams', description: 'GLib App ID')
option('twitch_client_id', type: 'string', value: 'pk0svne4jfklyjqlul3h7qc852vmad', description: 'Twitch Application Client ID (https://dev.twitch.tv/docs/authentication/register-app/)')